Fix overflow content in Combobox’s dropdown

--- a/src/components/common/composite/Combobox/Combobox.styles.scss
+++ b/src/components/common/composite/Combobox/Combobox.styles.scss
@@ -30,6 +30,7 @@
     border-top: none;
     display: block;
     max-height: 300px;
+    overflow-x: hidden;
     overflow-y: scroll;
     position: absolute;
     width: 100%;
